--- a/TODO
+++ b/TODO
@@ -47,3 +47,6 @@
 	* Skeleton information
 	* Animation key frame information
 	* Level of detail
+
+* Use compressed DDS files since they are faster to load and increase performance
+* Load DDS files manually to hand them to the GPU directly without uncompressing
